feat: FSD 구조에 맞게 컴포넌트를 생성하는 스크립트

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen_component": "bash shell/generated_component.sh"
   },
   "dependencies": {
     "react": "^18",
