--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@radix-ui/themes": "^3.1.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
